--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">LSC App</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+
+    <string name="practice">Practicar</string>
+    <string name="dictionary">Diccionario</string>
+    <string name="leaderboard">Tabla de clasificación</string>
+    <string name="configuration">Configuración</string>
+    <string name="about">Acerca de</string>
+    <string name="sign_out">Cerrar sesión</string>
+
 </resources>
