--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,15 @@
     <string name="about">Acerca de</string>
     <string name="sign_out">Cerrar sesión</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Label for the show bass checkbox preference -->
+    <string name="pref_background_black_label">Fondo negro</string>
+    <!-- Key name for storing bass in SharedPreferences -->
+    <string name="pref_background_black_key" translatable="false">background_black</string>
+    <!-- Summary for Checkboxes -->
+    <string name="pref_show_true">Shown</string>
+    <string name="pref_show_false">Hidden</string>
+
 </resources>
