--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="error_message">
         Un error ha ocurrido.
     </string>
+    <string name="imageview_description">
+        Contiene la imagen capturada
+    </string>
 
     <!-- BORRAR -->
     <string name="format_wind_kmh">
@@ -36,6 +39,8 @@
     <string name="today">Today</string>
     <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
     <string name="tomorrow">Tomorrow</string>
+    <string name="go">GO</string>
+    <string name="emojify_me">Emojify Me!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
