mvvm con practicas show-sign, which-one-video, which-one-videos, translate-video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="practice_discover_image_question">Observa la seña</string>
     <string name="practice_take_picture_question">Realiza la seña con la mano y tomale una foto</string>
     <string name="practice_translate_video_question">¿Qué describe la seña?</string>
-
+    <string name="practice_warning_message">Fallaste</string>
+    <string name="practice_success_message">Acertaste</string>
 
 </resources>
