Todas las practicas en mvvm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="configuration">Configuración</string>
     <string name="about">Acerca de</string>
     <string name="sign_out">Cerrar sesión</string>
+    <string name="sign_practice">Práctica de Señas</string>
 
     <!-- Label for the show bass checkbox preference -->
     <string name="pref_background_black_label">Fondo negro</string>
@@ -68,8 +69,9 @@
     <string name="practice_discover_image_question">¿A que imágen hace referencia?</string>
     <string name="practice_take_picture_question">Realiza la seña con la mano y tomale una foto</string>
     <string name="practice_translate_video_question">¿Qué describe la seña?</string>
-    <string name="practice_warning_message">Fallaste</string>
-    <string name="practice_success_message">Acertaste</string>
+    <string name="practice_warning_message">¡Fallaste!</string>
+    <string name="practice_success_message">¡Correcto!</string>
     <string name="practice_take_picture_button">Tomar foto</string>
+    <string name="practice_take_sign_analizing">Analizando&#8230;</string>
 
 </resources>
