podria decirse que versión alpha?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="practice">Practicar</string>
     <string name="dictionary">Diccionario</string>
     <string name="leaderboard">Tabla de clasificación</string>
-    <string name="configuration">Configuración</string>
+    <string name="profile">Perfil</string>
     <string name="about">Acerca de</string>
     <string name="sign_out">Cerrar sesión</string>
     <string name="sign_practice">Práctica de Señas</string>
